refactor(lib): code cleanup
